# sayfullin

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  database.py  deploy.sh  docker-compose.yml  index.html  main.py  poetry.md  pyproject.toml
.github/workflows/: deploy.yml
app/: config.py  crud.py  database.py  dependencies.py  main.py  models.py  requirements.txt  schemas.py  test.py  utils.py
app/api/: health.py  posts.py  routes.py  users.py
app/tests/: conftest.py  test_health.py  test_main.py  test_posts.py  test_users.py
backend/: Dockerfile  README.md  database.py  main.py  requirements.txt  run.sh  schemas.py
frontend/: README.md  build.sh  nginx.conf  package.json  vite.config.js
frontend/src/: App.css  App.jsx
notes_app/: auth.py  config.py  database.py  main.py  models.py
