[tool.poetry]
name = "sayfullin.tech"
version = "0.1.0"
description = "scada system"
authors = ["Ruslan Sayfullin <ruslansaifullin91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.118.0"
pydantic = "^2.11.9"
sqlalchemy = "^2.0.43"
uvicorn = "^0.37.0"
pytest = "^8.4.2"
mypy = "^1.18.2"
python-dotenv = "^1.1.1"
pydantic-settings = "^2.11.0"
asyncpg = "^0.30.0"
httpx = "^0.28.1"
pytest-asyncio = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "app.main:run_app"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"