[tool.poetry]
name = "sayfullin-tech"
version = "0.1.0"
description = "Supervisory Control and Data Acquisition for robotic production"
authors = ["Ruslan Sayfullin <ruslansaifullin91@gmail.com>"]
readme = "README.md"
packages = [{include = "sayfullin"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.118.0"
uvicorn = "^0.37.0"
sqlalchemy = "^2.0.43"
pydantic = {extras = ["all"], version = "^2.11.9"}
pydantic-settings = "^2.11.0"
asyncpg = "^0.30.0"
python-dotenv = "^1.1.1"
alembic = "^1.16.5"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
pytest-cov = "^7.0.0"
httpx = "^0.28.1"
black = "^25.9.0"
isort = "^6.1.0"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "app.main:run_app"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]