[tool.poetry]
name = "sayfullin-tech"
version = "0.1.0"
description = "Supervisory Control and Data Acquisition for robotic production"
authors = ["Ruslan Sayfullin <ruslansaifullin91@gmail.com>"]
readme = "README.md"
packages = [{include = "sayfullin"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.118.0"
uvicorn = {extras = ["standard"], version = "^0.37.0"}
sqlalchemy = "^2.0.43"
asyncpg = "^0.30.0"
python-dotenv = "^1.1.1"
pydantic-settings = "^2.11.0"
alembic = "^1.16.5"
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

